--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       <div class="card">
       <div class="card">
       </div>
-        <img src="images/paris.jpg" alt="Paris">
+        <img src="paris.jpg" alt="Paris">
         <h3>Paris</h3>
       </div>
       <div class="card">
-        <img src="images/goa.jpg" alt="Goa">
+        <img src="goa.jpg" alt="Goa">
         <h3>Goa</h3>
     </div>
-        <img src="images/dubai.jpg" alt="Dubai">
+        <img src="dubai.jpg" alt="Dubai">
         <h3>Dubai</h3>
       </div>
   </section>
@@ -59,9 +59,9 @@
   <section id="adventures">
     <h2>Highlighted Adventures</h2>
     <div class="adventure-images">
-      <img src="images/adventure1.jpg" alt="">
-      <img src="images/adventure2.jpg" alt="">
-      <img src="images/adventure3.jpg" alt="">
+      <img src="adventure1.jpg" alt="">
+      <img src="adventure2.jpg" alt="">
+      <img src="adventure3.jpg" alt="">
     </div>
   </section>
 
@@ -72,5 +72,6 @@
   </footer>
 </body>
 </html>
+
 
 
