--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       <div class="card">
       <div class="card">
       </div>
-        <img src="paris.jpg" alt="Paris">
+        <img src="Paris.jpg" alt="Paris">
         <h3>Paris</h3>
       </div>
       <div class="card">
-        <img src="goa.jpg" alt="Goa">
+        <img src="Goa.jpg" alt="Goa">
         <h3>Goa</h3>
     </div>
-        <img src="dubai.jpg" alt="Dubai">
+        <img src="Dubai.jpg" alt="Dubai">
         <h3>Dubai</h3>
       </div>
   </section>
@@ -72,6 +72,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
